fix border on mobile

--- a/src/styles/Settings.module.scss
+++ b/src/styles/Settings.module.scss
@@ -95,6 +95,7 @@ $menu-height: 90px;
   z-index: 1;
 
   @include screenMobile {
+    border-right: 0;
     padding-left: 0px;
     width: 100%;
     height: $menu-height;
